force-app/main/default/objects/custom_create393__c/custom_create393__c.object-meta.xml
<CustomObject>
    <label>Custom created object393</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects393</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>