force-app/main/default/objects/custom_create393__c/fields/custom_create_393field528__c.field-meta.xml
<CustomField>
    <fullName>custom_create_393field528__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 393field528</label>
    <type>Checkbox</type>
</CustomField>