force-app/main/default/objects/custom_create393__c/fields/custom_create_393field547__c.field-meta.xml
<CustomField>
    <fullName>custom_create_393field547__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 393field547</label>
    <type>Checkbox</type>
</CustomField>